# dimsum

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
src/dimsum/: app.py  celery_app.py  config.py  extensions.py
src/dimsum/api/: asvs.py  auth.py  findings.py  plugins.py  projects.py  reports.py  scan_configs.py  scans.py  schemas.py  source_analysis.py  targets.py  wordlists.py
src/dimsum/asvs/: __init__.py  compliance.py  seeder.py
src/dimsum/models/: __init__.py  asvs_check.py  compat.py  finding.py  project.py  scan.py  scan_config.py  source_upload.py  target.py  user.py  wordlist.py
src/dimsum/reports/: __init__.py  generator.py
src/dimsum/scanner/: __init__.py  base_plugin.py  context.py  engine.py  http_client.py  payload_generator.py  payloads.py  registry.py  result.py
src/dimsum/source_analysis/: __init__.py  analyzer.py  parsers.py
src/dimsum/tasks/: scan_tasks.py
src/dimsum/templates/: base.html
src/dimsum/utils/: pagination.py  url_utils.py  validators.py
src/dimsum/views/: auth.py  dashboard.py  findings.py  projects.py  reports.py  scans.py  settings.py
src/dimsum/wordlists/: __init__.py
tests/: conftest.py  test_integration.py
tests/test_api/: test_auth.py  test_projects.py  test_wordlists.py
tests/test_asvs/: test_compliance.py
tests/test_models/: test_user.py
tests/test_reports/: test_generator.py
tests/test_scanner/: test_engine.py
tests/test_scanner/test_plugins/: test_enumeration.py
tests/test_source_analysis/: test_analyzer.py
(+28 files in other folders)
