[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dimsum"
version = "0.1.0"
description = "An AI-built and maintained Dynamic Application Security Testing (DAST) utility"
readme = "README.md"
license = {text = "Unlicense"}
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0,<4",
    "flask-sqlalchemy>=3.1,<4",
    "flask-migrate>=4.0,<5",
    "flask-login>=0.6,<1",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "psycopg2-binary>=2.9,<3",
    "marshmallow>=3.20,<4",
    "celery[redis]>=5.3,<6",
    "redis>=5.0,<6",
    "httpx>=0.27,<1",
    "werkzeug>=3.0,<4",
    "gunicorn>=21.2,<23",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
source-analysis = [
    "tree-sitter>=0.21,<1",
    "tree-sitter-javascript>=0.21,<1",
    "tree-sitter-typescript>=0.21,<1",
]
reports = [
    "weasyprint>=61,<63",
]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=4.1,<6",
    "factory-boy>=3.3,<4",
    "ruff>=0.3,<1",
]
all = [
    "dimsum[source-analysis,reports,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
